feature: optons buttons

--- a/ResponsiveWebDesign/HTML/index.html
+++ b/ResponsiveWebDesign/HTML/index.html
@@ -1,11 +1,60 @@
-<html>
-  <body>
-    <main>
-      <h1>CatPhotoApp</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<body>
+
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Responsive WEB Design</title>
+  </head>
+  <main>
+    <h1>CatPhotoApp</h1>
+    <section>
       <h2>Cat Photos</h2>
       <!-- TODO: Add link to cat photos -->
       <p>See more <a href="https://freecatphotoapp.com" target="_blank">cat photos</a> in our gallery.</p>
-      <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back">
-    </main>
-  </body>
+      <a href="https://freecatphotoapp.com">
+        <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg"
+          alt="A cute orange cat lying on its back">
+      </a>
+    </section>
+    <section>
+      <h2>Cat Lists</h2>
+      <h3>Things cats love:</h3>
+      <ul>
+        <li>cat nip</li>
+        <li>laser pointers</li>
+        <li>lasagna</li>
+      </ul>
+      <figure>
+        <a href="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg"><img
+            src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg"
+            alt="A slice of lasagna on a plate.">
+          <figcaption>Cats <em>love</em> lasagna.</figcaption>
+        </a>
+      </figure>
+      <h3>Top 3 things cats hate:</h3>
+      <ol>
+        <li>flea treatment</li>
+        <li>thunder</li>
+        <li>other cats</li>
+      </ol>
+      <figure>
+        <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field.">
+        <figcaption>Cats <strong>hate</strong> other cats.</figcaption>
+      </figure>
+    </section>
+    <section>
+      <h2>Cat Form</h2>
+      <form action="https://freecatphotoapp.com/submit-cat-photo"></form>
+      <!-- <input type="radio" button></button Indoor> -->
+      <input type="radio" name="" id="" button type=""></button>
+      <input type="text" name="catphototourl" placeholder="Email adress" id="" required>
+      <button type="submit">submit</button>
+    </section>
+  </main>
+</body>
+
 </html>
