--- a/ResponsiveWebDesign/index.html
+++ b/ResponsiveWebDesign/index.html
@@ -57,9 +57,9 @@
       </fieldset>
       <fieldset>
         <legend>What's your cat's personality?</legend>
-        <input type="checkbox" id="loving" name="personality"><label for="loving"> Loving </label>
-        <input id="lazy" type="checkbox" name="personality"> <label for="lazy"> Lazy </label>
-        <input id="energetic" type="checkbox" name="personality"> <label for="energetic"> Energetic </label>
+        <input type="checkbox" id="loving" name="personality" value="loving"><label for="loving"> Loving </label>
+        <input id="lazy" type="checkbox" name="personality" value="lazy"> <label for="lazy"> Lazy </label>
+        <input id="energetic" type="checkbox" name="personality" value="energetic"> <label for="energetic"> Energetic </label>
       </fieldset>
       <input type="text" name="catphototourl" placeholder="Email adress" id="" required>
       <button type="submit">submit</button>
