--- a/LearningCSS/index.html
+++ b/LearningCSS/index.html
@@ -21,6 +21,15 @@ and also a <a href="http://example.com">link</a>.</p>
         <li>Item <em>three</em></li>
     </ul>
 
+    <p1 class="special">What color am I?</p1>
+
+    <div class="outer"><div class="box">The inner box is 90% - 30px.</div></div>
+
+    <div class="box"></div>
+
+
+
+    
 </body>
 
 </html>
