--- a/ResponsiveWebDesign/html/index.html
+++ b/ResponsiveWebDesign/html/index.html
@@ -32,7 +32,7 @@
         <a href="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg"><img
             src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg"
             alt="A slice of lasagna on a plate.">
-          <figcaption>Cats <em>love</em> lasagna.</figcaption>
+          <figcaption>Cats <em>love</em> lasagna</figcaption>
         </a>
       </figure>
       <h3>Top 3 things cats hate:</h3>
